# wasl

./: .gitignore  Cargo.toml  README.md  TODO.md
api/: Cargo.toml
api/src/: config.rs  main.rs  result.rs  settings.rs  setup.rs
api/src/auth/: groups.rs  identity.rs  mod.rs  token.rs
api/src/handlers/: auth.rs  echo.rs  mod.rs  services.rs
api/src/middlewares/: auth.rs
api/src/routes/: echo.rs
api/src/security/: password.rs  random.rs
api/src/services/: auth.rs
business/: Cargo.toml
business/migrations/2021-11-28-150151_create_services/: up.sql
business/src/: config.rs  lib.rs  result.rs
business/src/data/models/: confirmation.rs  product.rs  service.rs  user.rs
business/src/io/: mod.rs
business/src/security/: mod.rs  password.rs  random.rs
business/src/security/crypto/: mod.rs
business/src/services/: auth.rs  confirmations.rs  email.rs  mod.rs  services.rs  users.rs
data/: Cargo.toml
data/data-derive/: Cargo.toml
data/data-derive/src/: lib.rs  model.rs
data/migrations/2021-11-05-220730_create_users/: up.sql
data/migrations/2021-11-10-204645_create_admins_table/: up.sql
data/migrations/2021-11-10-211459_create_groups_table/: up.sql
data/migrations/2021-11-10-215156_add_is_provider_column_to_users_table/: down.sql  up.sql
data/migrations/2021-11-10-221633_create_admin_groups_table/: down.sql  up.sql
data/migrations/2021-11-10-221633_create_user_groups_table/: up.sql
data/migrations/2021-11-11-120425_add_created_at_column_to_users_table/: up.sql
data/migrations/2021-11-17-164639_create_confirmations/: up.sql
data/migrations/2021-11-28-150147_create_products/: up.sql
data/migrations/2021-11-28-150151_create_services/: up.sql
data/src/: context.rs  lib.rs  result.rs  schema.rs
data/src/models/: admin.rs  confirmation.rs  group.rs  mod.rs  model.rs  product.rs  service.rs  user.rs  validate.rs
data/src/repos/: admins_repo.rs  confirmations_repo.rs  experimental.rs  groups_repo.rs  mod.rs  products_repo.rs  repo.rs  services_repo.rs  users_repo.rs
wasl/: Cargo.toml  diesel.toml
wasl/migrations/2021-11-10-221633_create_user_groups_table/: down.sql  up.sql
wasl/migrations/2021-11-17-164639_create_confirmations/: down.sql  up.sql
wasl/migrations/2021-11-28-150147_create_products/: up.sql
wasl/migrations/2021-11-28-150151_create_services/: up.sql
wasl/migrations/2021-12-11-012241_create_financial_records/: down.sql  up.sql
wasl/migrations/2021-12-11-014306_create_transactions/: down.sql  up.sql
wasl/migrations/2021-12-16-082308_create_financial_record_confirmations/: down.sql  up.sql
wasl/migrations/2021-12-16-082308_create_financial_record_verifications/: down.sql  up.sql
wasl/migrations/2021-12-16-115936_create_service_reservations/: down.sql  up.sql
wasl/migrations/2021-12-18-134110_create_product_orders/: down.sql  up.sql
wasl/migrations/2021-12-19-130923_create_transaction_confirmations/: down.sql  up.sql
wasl/src/: lib.rs  result.rs
wasl/src/data/: mod.rs  schema.rs
wasl/src/data/models/: confirmation.rs  financial_record.rs  group.rs  mod.rs  product.rs  service.rs  transaction.rs  user.rs  validate.rs
wasl/src/security/: key.rs  mod.rs  password.rs  signature.rs
wasl/src/services/: auth.rs  confirmations.rs  email.rs  finance.rs  financial_records.rs  finanical_records.rs  mod.rs  products.rs  repository.rs  services.rs  transactions.rs  users.rs
