[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
data = { path = "../data" }

actix-web    = "3"
csrf         = "0.4"
derive_more  = "0.99"
dotenv       = "0.15"
env_logger   = "0.8"
hex          = "0.4"
log          = "0.4"
jsonwebtoken = "7.2"
rand         = "0.8"
rust-argon2  = "0.8.3"
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
validator    = { version = "0.12", features = ["derive"] }
