[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
data     = { path = "../data" }
business = { path = "../business" }

actix-identity = "0.3"
actix-web      = "3"
chrono         = "0.4"
config         = "0.11"
csrf           = "0.4"
derive_more    = "0.99"
env_logger     = "0.8"
jsonwebtoken   = "7.2"
log            = "0.4"
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
validator      = { version = "0.12", features = ["derive"] }
