[package]
name = "data"
version = "0.1.0"
edition = "2021"

[dependencies]
data-derive = { path = "data-derive" }

dotenv      = "0.15.0"
diesel      = { version = "1.4.8", features = ["postgres", "r2d2", "chrono"] }

serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"

derive_more = "0.99"
