[package]
name = "data"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono      = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
diesel      = { version = "1.4.8", features = ["postgres", "r2d2", "chrono"] }
lazy_static = "1.4"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
regex       = "1"
validator   = { version = "0.12", features = ["derive"] }
