[package]
name = "wasl"
version = "0.1.0"
edition = "2021"

[dependencies]
base64      = "0.13.0"
chrono      = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
lazy_static = "1.4"
lettre      = "0.10.0-rc.4"
native-tls  = "0.2"
bigdecimal  = "0.3"
rand        = "0.8"
rust-argon2 = "0.8.3"
regex       = "1"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
validator   = { version = "0.12", features = ["derive"] }

[dependencies.diesel]
version = "1.4"
features = ["postgres", "r2d2", "chrono", "numeric"]

[dependencies.diesel-derive-enum]
version = "1"
features = ["postgres"]
